# ercp_basic.rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  shell.nix
macros/: Cargo.toml
macros/src/: lib.rs
proptest-regressions/: command.txt  connection.txt  frame.txt  frame_buffer.txt  lib.txt  router.txt
src/: adapter.rs  command.rs  connection.rs  crc.rs  error.rs  frame.rs  frame_buffer.rs  lib.rs  receiver.rs  router.rs  timer.rs  version.rs
src/adapter/: embedded.rs  host.rs  rtt.rs  rtt_probe_rs.rs  serial.rs  serial_host.rs
src/receiver/: frame_buffer.rs  standard_receiver.rs
src/timer/: std_timer.rs
tests/: tests.rs
