[package]
name = "ercp_basic"
version = "0.1.0"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
embedded-crc-macros = "0.1.0"
embedded-hal = { version = "0.2.5", optional = true }
ercp_basic_macros = { path = "macros" }
heapless = "0.7.3"
nb = { version = "1.0.0", optional = true }
probe-rs-rtt = { version = "0.11.0", optional = true }
rtt-target = { version = "0.3.1", optional = true }
serialport = { version = "4.0.1", optional = true }

[build-dependencies]
embedded-crc-macros = "0.1.0"

[dev-dependencies]
proptest = "1.0.0"

[features]
rtt = ["rtt-target"]
rtt-probe-rs = ["probe-rs-rtt", "std"]
serial = ["embedded-hal", "nb"]
serial-host = ["serialport", "std"]
std = []

[workspace]
members = [
    "macros",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
