[package]
name = "ercp_basic"
version = "0.1.0-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
embedded-crc-macros = "1"
embedded-hal = { version = "0.2", optional = true }
heapless = "0.7"
nb = { version = "1", optional = true }
probe-rs-rtt = { version = "0.11", optional = true }
rtt-target = { version = "0.4", optional = true }
serialport = { version = "4", optional = true }

[build-dependencies]
embedded-crc-macros = "1"

[dev-dependencies]
proptest = "1"

[features]
rtt = ["rtt-target"]
rtt-probe-rs = ["probe-rs-rtt", "std"]
serial = ["embedded-hal", "nb"]
serial-host = ["serialport", "std"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
